--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,6 +39,9 @@ layout: base
         </div>
       {% endif %}
 
+      {% include reading-time.html %}
+
+
       <div class="blog-post">
         {{ content }}
       </div>
