--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ layout: base
         </div>
       {% endif %}
 
-      {% include reading-time.html %}
+      {% include readtime.html %}
 
 
       <div class="blog-post">
